# ibkr-trading-terminal

./: .gitignore  README.md  pyproject.toml  run.py
scripts/: generate_config.py  init_db.py
src/ibkr_tui/: __init__.py  app.py  config.py  init_db.py  main.py  models.py  order_service.py  state.py
src/ibkr_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ibkr_tui/broker/: account.py  finnhub_client.py  ib_client.py  market_data.py  orders.py
src/ibkr_tui/risk/: __init__.py  risk_manager.py
src/ibkr_tui/storage/: sqlite_store.py
src/ibkr_tui/ui/: command_palette.py  screens.py  tables.py  widgets.py
tests/: test_config.py  test_init_db_script.py  test_market_data.py  test_order_service.py  test_orders.py  test_risk.py  test_state.py  test_storage.py  test_ui_config.py
