[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-tui"
version = "0.1.0"
description = "Keyboard-driven IBKR trading terminal built with Textual and ib_insync."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "finnhub-python>=2.4.25",
    "ib-insync>=0.9.86",
    "pydantic>=2.8",
    "textual>=0.62",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ibkr-tui = "ibkr_tui.main:main"
ibkr-tui-init-db = "ibkr_tui.init_db:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
